Added software attribution.

--- a/manuscript/notes.tex
+++ b/manuscript/notes.tex
@@ -407,7 +407,7 @@ sizes to have the power that most consider appropriate (at 0.8 and above).
 \includegraphics[width=\textwidth]{../graphs/powergraph}
 
 \caption{Power for a two-sided, two-sample $t$-test of $H_0: \mu=0$ as the effect 
-size and sample size varies ($\alpha=0.05$)}\label{fig:power}
+size and sample size varies ($\alpha=0.05$). Calculated with the R-command \texttt{power.t.test} \citep{R2023}.}\label{fig:power}
 \end{figure}
 
 
